# review-gen

./: CLAUDE.md  LICENSE  README.md  README_zh.md  requirements-openxlab.txt  requirements.txt
backend/openalex-ajg-mcp/: .gitignore  README.md  pyproject.toml
backend/openalex-ajg-mcp/data/: ajg_2024_template.csv
backend/openalex-ajg-mcp/src/openalex_mcp/: abs_loader.py  client.py  report_generator.py  server.py  utils.py
backend/paper-download-mcp/: README.md  pyproject.toml
backend/paper-download-mcp/src/paper_download_mcp/: __init__.py  formatters.py  models.py  runtime.py  server.py
backend/paper-download-mcp/src/paper_download_mcp/adapters/: __init__.py  (+1 more)
skills/management-review-planner/: SKILL.md
skills/management-review-planner/references/: planning-prompt-templates.md  planning-standards.md
skills/management-review-planner/scripts/: build_review_plan.py
skills/management-review-writer/: SKILL.md
skills/management-review-writer/references/: review-prompt-templates.md  review-writing-standards.md
skills/management-review-writer/scripts/: build_review_packet.py  validate_draft_citations.py
skills/openalex-ajg-insights/: SKILL.md
skills/openalex-ajg-insights/references/: full-text-reading-strategy.md  pdf-fulltext-pipeline.md  systematic-review-workflow.md
skills/openalex-ajg-insights/scripts/: download_manifest_papers.py  openalex_ajg_bridge.py  review_workflow.py
skills/review-orchestrator/: SKILL.md
skills/review-orchestrator/references/: orchestration-rules.md
skills/review-orchestrator/scripts/: review_state_manager.py
(+35 files in other folders)
